--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bin/postgresql"]
 	path = bin/postgresql
 	url = git://git.postgresql.org/git/postgresql.git
+[submodule "lib/LibMallocTrace"]
+	path = lib/LibMallocTrace
+	url = https://github.com/timm-allman/LibMallocTrace
